match the positive peaks with the camira and WHL15 cluster catalogs

--- a/notebook/s19/mayavi3DcontourPlot.ipynb
+++ b/notebook/s19/mayavi3DcontourPlot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
     "%pylab inline\n",
     "import astropy.io.fits as pyfits\n",
     "from mayavi import mlab\n",
+    "from configparser import ConfigParser\n",
     "configName  =   'wrkDir/config-nl20.ini'\n",
     "parser      =   ConfigParser()\n",
     "parser.read(configName)\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2=pyfits.getdata('./camira_clsmap.fits')\n",
+    "data3=pyfits.getdata('./WHL_clsmap.fits')\n",
+    "data2=np.bitwise_or(data2.astype(bool),data3.astype(bool)).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "mlab.contour3d(data1+0.0000001,contours=6, transparent=True)\n",
+    "mlab.contour3d(data2,contours=1, transparent=True)\n",
     "mlab.outline(extent=[0,20,0,300,0,300])\n",
     "mlab.show()"
    ]
