--- a/notebook/s19/prepare_poz_stack.ipynb
+++ b/notebook/s19/prepare_poz_stack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XMM\n"
+      "XMM\n",
+      "GAMA09H\n"
      ]
     },
     {
@@ -66,8 +67,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAMA09H\n",
-      "WIDE12H\n"
+      "WIDE12H\n",
+      "GAMA15H\n"
      ]
     },
     {
@@ -84,25 +85,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAMA15H\n",
-      "VVDS\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
-      "  if sys.path[0] == '':\n",
-      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "VVDS\n",
       "HECTOMAP\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  if sys.path[0] == '':\n",
+      "/home/xiangchong/work/ana/lsstsw/miniconda/envs/lsst-scipipe-cb4e2dc/lib/python3.7/site-packages/ipykernel_launcher.py:12: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"overwrite\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "  if sys.path[0] == '':\n"
      ]
     }
    ],
@@ -162,14 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XMM\n"
+      "XMM\n",
+      "GAMA09H\n"
      ]
     },
     {
@@ -186,8 +181,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAMA09H\n",
-      "WIDE12H\n"
+      "WIDE12H\n",
+      "GAMA15H\n"
      ]
     },
     {
@@ -204,7 +199,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GAMA15H\n",
       "VVDS\n",
       "HECTOMAP\n"
      ]
