--- a/notebook/s19/mayavi3DcontourPlot.ipynb
+++ b/notebook/s19/mayavi3DcontourPlot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "mlab.contour3d(data1+0.0000001,contours=6, transparent=True)\n",
-    "mlab.contour3d(data2,contours=1, transparent=True)\n",
+    "#mlab.contour3d(data2,contours=1, transparent=True)\n",
     "mlab.outline(extent=[0,20,0,300,0,300])\n",
     "mlab.show()"
    ]
