--- a/doc/talk_HSC_WL/ms.tex
+++ b/doc/talk_HSC_WL/ms.tex
@@ -67,12 +67,9 @@ Shiro Ikeda, Wentao Luo
 \end{frame}
 
 \begin{frame}{Plans}
-\begin{itemize}
-    \item Use Planck CMB mass map to improve performance on high-z?
-    \item Cluster detection on S19A?
-    \item X-ray clusters?
-    \item Welcome to join the project!
-\end{itemize}
+    \begin{Huge}
+        Thanks !!
+    \end{Huge}
 \end{frame}
 
 \end{document}
