--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -108,6 +108,62 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{WL-massMap-clusDet-Schneider1996,
+       author = {{Schneider}, Peter},
+        title = "{Detection of (dark) matter concentrations via weak gravitational lensing}",
+      journal = {\mnras},
+     keywords = {GALAXIES: CLUSTERS: GENERAL, DARK MATTER, GRAVITATIONAL LENSING, LARGE-SCALE STRUCTURE OF UNIVERSE, Astrophysics},
+         year = 1996,
+        month = dec,
+       volume = {283},
+       number = {3},
+        pages = {837-853},
+          doi = {10.1093/mnras/283.3.837},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9601039},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996MNRAS.283..837S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{WL-massMap-peakcounts-Jain2000,
+       author = {{Jain}, Bhuvnesh and {Van Waerbeke}, Ludovic},
+        title = "{Statistics of Dark Matter Halos from Gravitational Lensing}",
+      journal = {\apjl},
+     keywords = {COSMOLOGY: THEORY, COSMOLOGY: GRAVITATIONAL LENSING, METHODS: NUMERICAL, Astrophysics},
+         year = 2000,
+        month = feb,
+       volume = {530},
+       number = {1},
+        pages = {L1-L4},
+          doi = {10.1086/312480},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9910459},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000ApJ...530L...1J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-clusDet-Hamana2004,
+       author = {{Hamana}, Takashi and {Takada}, Masahiro and {Yoshida}, Naoki},
+        title = "{Searching for massive clusters in weak lensing surveys}",
+      journal = {\mnras},
+     keywords = {gravitational lensing, galaxies: haloes, cosmology: theory, dark matter, large-scale structure of Universe, Astrophysics},
+         year = 2004,
+        month = may,
+       volume = {350},
+       number = {3},
+        pages = {893-913},
+          doi = {10.1111/j.1365-2966.2004.07691.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0310607},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004MNRAS.350..893H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{WL-massMap-Glimpse2D-Lanusse2016,
        author = {{Lanusse}, F. and {Starck}, J. -L. and {Leonard}, A. and {Pires}, S.},
         title = "{High resolution weak lensing mass mapping combining shear and flexion}",
@@ -126,6 +182,135 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{WL-massMap-peakcountsAna-Fan2010,
+       author = {{Fan}, Zuhui and {Shan}, Huanyuan and {Liu}, Jiayi},
+        title = "{Noisy Weak-lensing Convergence Peak Statistics Near Clusters of Galaxies and Beyond}",
+      journal = {\apj},
+     keywords = {cosmology: theory, dark matter, galaxies: clusters: general, gravitational lensing: weak, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2010,
+        month = aug,
+       volume = {719},
+       number = {2},
+        pages = {1408-1420},
+          doi = {10.1088/0004-637X/719/2/1408},
+archivePrefix = {arXiv},
+       eprint = {1006.5121},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...719.1408F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-peakcountsFM-Lin2016,
+       author = {{Lin}, Chieh-An and {Kilbinger}, Martin and {Pires}, Sandrine},
+        title = "{A new model to predict weak-lensing peak counts. III. Filtering technique comparisons}",
+      journal = {\aap},
+     keywords = {gravitational lensing: weak, large-scale structure of Universe, methods: statistical, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2016,
+        month = sep,
+       volume = {593},
+          eid = {A88},
+        pages = {A88},
+          doi = {10.1051/0004-6361/201628565},
+archivePrefix = {arXiv},
+       eprint = {1603.06773},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...593A..88L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-clusDet-CFHT-Shan2012,
+       author = {{Shan}, HuanYuan and {Kneib}, Jean-Paul and {Tao}, Charling and {Fan}, Zuhui and {Jauzac}, Mathilde and {Limousin}, Marceau and {Massey}, Richard and {Rhodes}, Jason and {Thanjavur}, Karun and {McCracken}, Henry J.},
+        title = "{Weak Lensing Measurement of Galaxy Clusters in the CFHTLS-Wide Survey}",
+      journal = {\apj},
+     keywords = {cosmology: observations, galaxies: clusters: general, gravitational lensing: weak, X-rays: galaxies: clusters, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2012,
+        month = mar,
+       volume = {748},
+       number = {1},
+          eid = {56},
+        pages = {56},
+          doi = {10.1088/0004-637X/748/1/56},
+archivePrefix = {arXiv},
+       eprint = {1108.1981},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...748...56S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-clusDet-HSC-Miyazaki2018,
+       author = {{Miyazaki}, Satoshi and {Oguri}, Masamune and {Hamana}, Takashi and {Shirasaki}, Masato and {Koike}, Michitaro and {Komiyama}, Yutaka and {Umetsu}, Keiichi and {Utsumi}, Yousuke and {Okabe}, Nobuhiro and {More}, Surhud and {Medezinski}, Elinor and {Lin}, Yen-Ting and {Miyatake}, Hironao and {Murayama}, Hitoshi and {Ota}, Naomi and {Mitsuishi}, Ikuyuki},
+        title = "{A large sample of shear-selected clusters from the Hyper Suprime-Cam Subaru Strategic Program S16A Wide field mass maps}",
+      journal = {\pasj},
+     keywords = {dark matter, galaxies: clusters: general, gravitational lensing: weak, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = jan,
+       volume = {70},
+          eid = {S27},
+        pages = {S27},
+          doi = {10.1093/pasj/psx120},
+archivePrefix = {arXiv},
+       eprint = {1802.10290},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018PASJ...70S..27M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-clusDet-HSC-Hamana2020,
+       author = {{Hamana}, Takashi and {Shirasaki}, Masato and {Lin}, Yen-Ting},
+        title = "{Weak-lensing clusters from HSC survey first-year data: Mitigating the dilution effect of foreground and cluster-member galaxies}",
+      journal = {\pasj},
+     keywords = {cosmology: observations, dark matter, galaxies: clusters: general, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = jul,
+       volume = {72},
+       number = {5},
+          eid = {78},
+        pages = {78},
+          doi = {10.1093/pasj/psaa068},
+archivePrefix = {arXiv},
+       eprint = {2004.00170},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PASJ...72...78H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-massMap-VanderPlas2011,
+       author = {{VanderPlas}, J.~T. and {Connolly}, A.~J. and {Jain}, B. and {Jarvis}, M.},
+        title = "{Three-dimensional Reconstruction of the Density Field: An SVD Approach to Weak-lensing Tomography}",
+      journal = {\apj},
+     keywords = {dark matter, gravitational lensing: weak, large-scale structure of universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2011,
+        month = feb,
+       volume = {727},
+       number = {2},
+          eid = {118},
+        pages = {118},
+          doi = {10.1088/0004-637X/727/2/118},
+archivePrefix = {arXiv},
+       eprint = {1008.2396},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJ...727..118V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{WL-clusDet-Hennawi2005,
+       author = {{Hennawi}, Joseph F. and {Spergel}, David N.},
+        title = "{Shear-selected Cluster Cosmology: Tomography and Optimal Filtering}",
+      journal = {\apj},
+     keywords = {Cosmology: Theory, Galaxies: Clusters: General, Cosmology: Gravitational Lensing, Cosmology: Large-Scale Structure of Universe, Methods: Numerical, Astrophysics},
+         year = 2005,
+        month = may,
+       volume = {624},
+       number = {1},
+        pages = {59-79},
+          doi = {10.1086/428749},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0404349},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...624...59H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{LSS-massMap-Glimpse3D-Leonard2014,
    author = {{Leonard}, A. and {Lanusse}, F. and {Starck}, J.-L.},
     title = "{GLIMPSE: accurate 3D weak lensing reconstructions using sparsity}",
@@ -141,7 +326,6 @@ archivePrefix = "arXiv",
    adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.440.1281L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @ARTICLE{AdaLASSO-Zou2006,
     title = {The Adaptive Lasso and Its Oracle Properties},
