--- a/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
@@ -38,10 +38,10 @@ the preliminary lasso estimation, which are $3.5$, $4.0$, and $5.0$. The
 corresponding regularization parameters for the final adaptive lasso
 estimations are set to $\lambda_{\rm{ada}}=\lambda^{\tau+1}$.  Here, we note
 that both the preliminary lasso estimation and the final adaptive lasso
-estimation select the pixels with the signal-to-noise ratios (SNRs) greater
-than $\lambda$ in each gradient descent iteration and estimate the density in
-the selected pixels. While the final adaptive lasso estimation further enhances
-the growth of the pixels with preliminary estimations greater than $\lambda$.
+estimation select the pixels with the SNRs greater than $\lambda$ in each
+gradient descent iteration and estimate the density in the selected pixels.
+While the final adaptive lasso estimation further enhances the growth of the
+pixels with preliminary estimations greater than $\lambda$.
 
 This paper does not go beyond the resolution limit defined by the Gaussian
 smoothing kernel with a standard deviation of $1.\arcmin 5$ and the $1\arcmin$
@@ -137,16 +137,16 @@ $0.5\%$.
 
 With the intent to suppress false detections, we select peaks with values
 greater than an ad-hoc threshold as candidates of galaxy clusters following
-\citet{HSC1-massMap-cluster}.  The threshold is set to a few times the standard
-deviation of the noise peaks. We use different detection thresholds
-($1.5\sigma$ and $3.0\sigma$) to detect galaxy clusters from the mass maps
-reconstructed with $\lambda=3.5,4.0,5.0$. The left and middle columns of Figure
-\ref{fig_detFalsRateNFW} show the detection rates for halos in the (mass,
-redshift) planes with detection thresholds set to $1.5\sigma$ and $3.0\sigma$
-of the noise peaks' distributions, respectively.  The right column of Figure
-\ref{fig_detFalsRateNFW} shows the corresponding numbers of false detections
-per square degree as functions of detection thresholds. The first, second, and
-third rows of Figure \ref{fig_detFalsRateNFW} correspond to the
+\citet{WL-massMap-clusDet-HSC-Miyazaki2018}.  The threshold is set to a few
+times the standard deviation of the noise peaks. We use different detection
+thresholds ($1.5\sigma$ and $3.0\sigma$) to detect galaxy clusters from the
+mass maps reconstructed with $\lambda=3.5,4.0,5.0$. The left and middle columns
+of Figure \ref{fig_detFalsRateNFW} show the detection rates for halos in the
+(mass, redshift) planes with detection thresholds set to $1.5\sigma$ and
+$3.0\sigma$ of the noise peaks' distributions, respectively.  The right column
+of Figure \ref{fig_detFalsRateNFW} shows the corresponding numbers of false
+detections per square degree as functions of detection thresholds. The first,
+second, and third rows of Figure \ref{fig_detFalsRateNFW} correspond to the
 $lambda=3.5,4.0,5.0$, respectively.
 
 Figure \ref{fig_detFalsRateNFW} tells that the false peak density is suppressed
