--- a/doc/paper_ms_method_HSCY1/massmap_sim.tex
+++ b/doc/paper_ms_method_HSCY1/massmap_sim.tex
@@ -13,7 +13,8 @@
 The $\Lambda$CDM cosmology used in this paper is from the best-fit result of
 the final full-mission Planck observation of the cosmic microwave background
 (CMB) with $H_0=67.4 ~\rm{km~s^{-1} Mpc^{-1}}$ $\Omega_M=0.315$,
-$\Omega_\Lambda=0.685$ \citep{cmb-Planck2018-Cosmology}.
+$\Omega_\Lambda=0.685$, $\sigma_8=0.811$, $n_s=0.965$
+\citep{cmb-Planck2018-Cosmology}.
 
 We sample halos in a two-dimensional redshift-mass plane. The redshift-mass
 plane is evenly divided into eight redshift bins and eight mass bins. We
