--- a/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
@@ -174,3 +174,15 @@ M_{\odot}/h$ for the low ($z<0.3$), median ($0.3\leq z< 0.6$) and high
     } \label{fig_detFalsRateNFW}
 \end{figure*}
 
+According to the detection rate measured from the simulation, we predict
+the number density of detected cluster
+\begin{figure}
+ \centering
+ \includegraphics[width=0.5\textwidth]{detNum_zm.pdf}
+ \caption{The expected number density of detected clusters per square degree as
+     a function of halo's virial mass and redshift. The number density in total
+     is $0.49~\rm{deg}^{-2}$.
+
+
+ } \label{fig_detNum}
+\end{figure}
