--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -73,6 +73,41 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{hmf-Murray2013,
+       author = {{Murray}, S.~G. and {Power}, C. and {Robotham}, A.~S.~G.},
+        title = "{HMFcalc: An online tool for calculating dark matter halo mass functions}",
+      journal = {Astronomy and Computing},
+     keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics},
+         year = 2013,
+        month = nov,
+       volume = {3},
+        pages = {23-34},
+          doi = {10.1016/j.ascom.2013.11.001},
+archivePrefix = {arXiv},
+       eprint = {1306.6721},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&C.....3...23M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{haloMass-Tinker2008,
+       author = {{Tinker}, Jeremy and {Kravtsov}, Andrey V. and {Klypin}, Anatoly and {Abazajian}, Kevork and {Warren}, Michael and {Yepes}, Gustavo and {Gottl{\"o}ber}, Stefan and {Holz}, Daniel E.},
+        title = "{Toward a Halo Mass Function for Precision Cosmology: The Limits of Universality}",
+      journal = {pj},
+     keywords = {cosmology: theory, large-scale structure of universe, methods: numerical, Astrophysics},
+         year = 2008,
+        month = dec,
+       volume = {688},
+       number = {2},
+        pages = {709-728},
+          doi = {10.1086/591439},
+archivePrefix = {arXiv},
+       eprint = {0803.2706},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...688..709T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{revKilbinger15,
    author = {{Kilbinger}, M.},
     title = "{Cosmology with cosmic shear observations: a review}",
