--- a/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
@@ -174,15 +174,20 @@ M_{\odot}/h$ for the low ($z<0.3$), median ($0.3\leq z< 0.6$) and high
     } \label{fig_detFalsRateNFW}
 \end{figure*}
 
-According to the detection rate measured from the simulation, we predict
-the number density of detected cluster
+According to the detection rate measured from the simulation, we predict the
+number density of detected cluster using the halo mass function of
+\citet{haloMass-Tinker2008}. We use HMF \citep{hmf-Murray2013}, an open-source
+package, to calculate the halo mass function.  The predicted halo detection
+number density for the setup ($\lambda=5$, $1.5\sigma$ detection threshold) is
+shown in Figure \ref{fig_detNum}. The expected cluster number density in total
+is $0.49$ $\deg^{-2}$, which is $78.4$ clusters for the first year HSC shear
+catalog \citep{HSC1-catalog} with a survey area of $\sim 160 \deg^2$.
+
 \begin{figure}
  \centering
  \includegraphics[width=0.5\textwidth]{detNum_zm.pdf}
  \caption{The expected number density of detected clusters per square degree as
      a function of halo's virial mass and redshift. The number density in total
-     is $0.49~\rm{deg}^{-2}$.
-
-
- } \label{fig_detNum}
+     is $0.49~\deg^{-2}$.
+     } \label{fig_detNum}
 \end{figure}
