small revision on paper

--- a/doc/paper_ms_method_HSCY1/massmap_sim.tex
+++ b/doc/paper_ms_method_HSCY1/massmap_sim.tex
@@ -44,8 +44,9 @@ photo-$z$ uncertainty.
 
 The mock galaxy catalogs are generated using the HSC S16A shape catalog
 \citep{HSC1-catalog}.  We use the galaxies in a one square degree region at the
-center of tract 9347 \citep{HSC1-data}.  The galaxies' positions are randomized
-to distribute homogeneously  in the one-square degree stamp statistically. We
+center of tract 9347 \citep{HSC1-data}. The average galaxy number density in
+this region is $22.94~\rm{arcmin}^{-2}$. The galaxies' positions are randomized to
+distribute homogeneously  in the one-square degree stamp statistically. We
 randomly assign its redshift for each galaxy following the MLZ photo-$z$
 probability distribution function \citep{HSC1-photoz}.
 
