--- a/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
+++ b/doc/paper_ms_method_HSCY1/sparse_NFW_results.tex
@@ -83,13 +83,15 @@ where the normalization matrix is defined as
 \begin{equation}
 \mathcal{R}_{l}=\sum_s K^2(z_l,z_s).
 \end{equation}
-The solid steps in Figure \ref{fig_peakHist} show the histograms of the
-normalized peaks with different penalization parameters. Also, we simulate
-$1000$ realizations of pure noise catalogs and perform the reconstructions on
-these noise catalogs to study the noise properties. The dashed steps in Figure
-\ref{fig_peakHist} show the histograms of normalized peaks detected from the
-pure noise catalogs. The solid lines in Figure \ref{fig_peakHist} show the
-best-fit Gaussian distributions to the noise peaks' histograms.
+In Figure \ref{fig_peakHist}, we show the stacked histograms of the
+normalized peaks with different penalization parameters. Here, we stack the
+histograms from $100$ realizations of all halos sampled in the redshift-mass
+plane.
+Also, we simulate $1000$ realizations of pure noise catalogs and perform the
+reconstructions on these noise catalogs to study the noise properties.  The
+histograms of normalized peaks detected from the pure noise catalogs are shown
+in Figure \ref{fig_peakHist} and we show the best-fit Gaussian functions of the
+noise peaks' histograms.
 
 Figure \ref{fig_peakHist} tells that the densities of peaks (including both
 true and false peaks) are suppressed as the penalization parameter $\lambda$
