--- a/doc/paper_ms_method_HSCY1/ms.tex
+++ b/doc/paper_ms_method_HSCY1/ms.tex
@@ -62,13 +62,13 @@
 % \email{xiangchong.li@ipmu.jp}
 
 \begin{abstract}
-A new method is developed to reconstruct three-dimensional mass maps from
-photometric weak-lensing shear measurements. The three-dimensional mass map is
-modeled as a summation of the NFW basis atoms, which have two-dimensional
-multi-scale NFW surface density profiles on the transverse plane and
-one-dimensional Dirac delta functions in the line of sight direction.  The
-adaptive lasso algorithm is applied to find a sparse reconstruction of the mass
-maps.
+A new method is developed to reconstruct high-resoluion three-dimensional mass
+maps from photometric weak-lensing shear measurements. The three-dimensional
+mass map is modeled as a summation of the NFW basis atoms, which have
+two-dimensional multi-scale NFW surface density profiles on the transverse
+plane and one-dimensional Dirac delta functions in the line of sight direction.
+The adaptive lasso algorithm is applied to find a sparse reconstruction of the
+mass maps.
 We study the performance of three-dimensional cluster detection from the
 reconstructed mass map with simulations that applies shear distortions from
 isolated halo to HSC-like galaxy shapes with realistic photometric redshift
@@ -80,11 +80,11 @@ adaptive lasso algorithm efficiently removes the line of sight smear.
 2) The algorithm is able to detect halo with minimal mass limits of $10^{14.0}
 M_{\odot}/h$, $10^{14.7} M_{\odot}/h$, $10^{15.0} M_{\odot}/h$ for the low
 ($z<0.3$), median ($0.3\leq z< 0.6$) and high ($0.6\leq z< 0.85$) redshifts,
-respectively, with a false detection of 0.022/deg$^2$.
+respectively, with an average false detection of 0.022/deg$^2$.
 3) The estimated redshift of the halos detected from the reconstructed mass
 maps are lower than the true redshift by about $0.03$ for halos at low
 redshifts ($z\leq 0.4$). The relative redshift bias is below $0.5\%$ for halos
-at $0.4<z\leq 0.85$.
+at $0.4<z\leq 0.85$. The standard deviation of the redshift estimation is $0.092$.
 \end{abstract}
 
 \section{Introduction}
@@ -150,9 +150,9 @@ and applied to large-scale surveys
 Cluster detection from $2$-D mass maps has been widely studied and applied to
 these large-scale weak-lensing surveys
 \citep{WL-massMap-clusDet-CFHT-Shan2012,WL-massMap-clusDet-HSC-Miyazaki2018,WL-massMap-clusDet-HSC-Hamana2020};
-however, cross matching with some (e.g., optically selected) cluster
-catalog is needed to assign the redshift and extract its physical parameter
-(such as mass) for each cluster selected from $2$-D mass map.
+however, cross matching with some (e.g., optically selected) cluster catalog is
+needed to assign the redshift and extract its physical parameter (such as mass)
+for each cluster selected from $2$-D mass map.
 
 On the other hand, we can directly reconstruct $3$-D mass maps taking advantage
 of photometric redshift (photo-$z$) information
@@ -223,34 +223,32 @@ dictionary (Section \ref{subsec_test-pm}).
 \section{Summary}
 \label{sec_Sum}
 
-We develop a novel method to reconstruct $3$-D density contrast maps from
-weak-lensing shear measurements and photometric redshift estimations.  Our
-method models $3$-D density contrast maps as summations of NFW atoms with
-different comoving radii.  With the prior assumption that the clumpy masses
-sparsely distribute in the $3$-D space, the density map is reconstructed
-using the adaptive lasso algorithm \citep{AdaLASSO-Zou2006}. The method is
-tested with realistic simulations using HSC-like shape estimation error and
-photo-$z$ uncertainty.
+We have developed a novel method to reconstruct high-resolution $3$-D density
+contrast maps from weak-lensing shear measurements and photometric redshift
+estimations.  Our method models $3$-D density contrast maps as summations of
+NFW atoms with different comoving radii.  With the prior assumption that the
+clumpy masses sparsely distribute in the $3$-D space, the density map is
+reconstructed using the adaptive lasso algorithm \citep{AdaLASSO-Zou2006}.
+We find that the lasso algorithm's solution suffers from a smear of structure
+in the line of sight direction even in the absence of galaxy shape noise, and
+the adaptive lasso algorithm efficiently removes the line of sight smear of
+structure.
 
-The findings of this paper are summarized as follows:
+We study the performance of cluster detection from the reconstructed $3$-D mass
+maps using simulations that apply shear distortions from isolated NFW halos to
+HSC-like shapes and photo-$z$ uncertainties.  We conclude that the algorithm is
+able to detect halo with minimal mass limits of $10^{14.0} M_{\odot}/h$,
+$10^{14.7} M_{\odot}/h$, $10^{15.0} M_{\odot}/h$ for the low ($z<0.3$), median
+($0.3\leq z< 0.6$) and high ($0.6\leq z< 0.85$) redshifts, respectively, with an
+average false detection of 0.022 deg$^{-2}$. The estimated redshifts of the halos
+detected from the reconstructed mass maps are lower than the true redshift by
+about $0.03$ for halos at low redshifts ($z\leq 0.4$).  The relative redshift
+bias is below $0.5\%$ for halos at $0.4<z\leq 0.85$. The standard deviation of
+the redshift estimation is $0.092$.
 
-(i) The lasso algorithm's solution suffers from a smear of structure in the
-line of sight direction even in the absence of shape noise, and the adaptive
-lasso algorithm efficiently removes the line of sight smear of structure.
-
-(ii) The algorithm is able to detect halo with minimal mass limits of
-$10^{14.0} M_{\odot}/h$, $10^{14.7} M_{\odot}/h$, $10^{15.0} M_{\odot}/h$ for
-the low ($z<0.3$), median ($0.3\leq z< 0.6$) and high ($0.6\leq z< 0.85$)
-redshifts, respectively, with a false detection of 0.022/deg$^2$.
-
-(iii)The estimated redshifts of the halos detected from the reconstructed mass
-maps are lower than the true redshift by about $0.03$ for halos at low
-redshifts ($z\leq 0.4$).  The relative redshift bias is below $0.5\%$ for halos
-at $0.4<z\leq 0.85$.
-
-We will apply the method to the shear measurements of the HSC survey
-\citep{HSC1-catalog,FPFSHSC1-Li2020} to perform galaxy cluster detection in our
-future work.
+We will apply the $3$-D mass map reconstruction to the shear measurements of
+the HSC survey \citep[e.g.,][]{HSC1-catalog,FPFSHSC1-Li2020} to perform galaxy
+cluster detection in our future work.
 
 \section*{Acknowledgements}
 XL thank Yin Li and Jiaxin Han for useful discussions.
