typo correction in paper

--- a/doc/paper_ms_method_HSCY1/massmap_method.tex
+++ b/doc/paper_ms_method_HSCY1/massmap_method.tex
@@ -459,8 +459,8 @@ density (defined in eq. (\ref{eq-numDesSmooth})):
 \begin{equation}
  M(\vec{r})=
 \begin{cases}
-0 & n_{\rm{sm}}>1,\\
-1 & \rm{else}.
+1 & n_{\rm{sm}}\geq 1,\\
+0 & \rm{else}.
 \end{cases}
 \end{equation}
 The mask changes the shear measurements by
